added changes to docs
